--- a/painel.html
+++ b/painel.html
@@ -27,7 +27,7 @@
         
         <h2 class="titlepage">Painel de Gestão</h2>
         <p>Abaixo estamos apresentando alguns dados derivados da portfólio unificado. Caso queira consultar todas as visões, acesse a <a href="https://lookerstudio.google.com/reporting/8316ecdf-d753-462e-b45e-1dfb74bc6423/page/p_4jlxdp985c?s=qEma3tK8rC0" title="DTO"></a>Dashboard no looker.</p>
-        <p class="control">Visualizar em: <span class="click" id="click-slide">Modo Slide</span></p>
+        <p class="control">Visualizar: <span class="click" id="click-slide">Em modo slide</span></p>
         
         <div class="cards">
             <div class="card card01">
