--- a/poker.html
+++ b/poker.html
@@ -166,7 +166,7 @@
           <h4>Links relacionados:</h4>
           <ul>
             <li><a href="arq/Modelo para Tese de Investimento - BVP (v2).pptx" title="Modelo tese de investimento (v2)">Modelo "one page" - tese de investimento (v2)</a></li>
-            <li><a href="https://miro.com/app/board/uXjVMAbQ3Zg=/?moveToWidget=3458764556740990447&cot=14" title="Mural para teses de investimento">[Sem link] Mural com teses de investimento para a próxima dinâmnica</a></li>
+            <li><a href="https://miro.com/app/board/uXjVMAbQ3Zg=/?moveToWidget=3458764556740990447&cot=14" title="Mural para teses de investimento">Mural com teses de investimento para a próxima dinâmnica</a></li>
           </ul>
         </div>
         
